# minidb

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml
crates/minidb/: Cargo.toml
crates/minidb-shared/: Cargo.toml
crates/minidb-shared/src/: error.rs  lib.rs
crates/minidb-utils/: Cargo.toml
crates/minidb-utils/benches/: fs.rs
crates/minidb-utils/src/: lib.rs
crates/minidb/src/: lib.rs
minidb/: Cargo.toml  README.md
minidb-macros/: Cargo.toml  README.md
minidb-macros/src/: lib.rs
minidb-shared/: Cargo.toml
minidb-shared/src/: error.rs
minidb-utils/: Cargo.toml  README.md
minidb-utils/benches/: crypto.rs  formats.rs  fs.rs  path.rs  utils.rs
minidb-utils/src/: crypto.rs  errors.rs  lib.rs  pathext.rs
minidb-utils/tests/: crypto.rs  fs.rs  path.rs
minidb/benches/: database.rs  encryption.rs  id.rs  minidb.rs
minidb/examples/: foreign_key.rs  simple.rs
minidb/src/: builder.rs  encryption.rs  error.rs  errors.rs  lib.rs  model.rs  testing.rs  traits.rs  transaction.rs
minidb/src/types/: mod.rs
minidb/tests/: database.rs  encryption.rs  id.rs  macros.rs  minidb.rs  store.rs
