[workspace]
resolver = "3"
members = ["minidb"]

[workspace.package]
authors = ["DarkCeptor44"]
edition = "2024"
rust-version = "1.89"
license = "LGPL-3.0-or-later"
homepage = "https://github.com/DarkCeptor44/minidb"
repository = "https://github.com/DarkCeptor44/minidb"

[workspace.dependencies]
anyhow = "1.0.100"
configura = "1.1.0"
cuid2 = "0.1.4"
divan = "0.1.21"
num-bigint = "0.4.4"
postcard = "1.1.3"
rand = "0.9.2"
redb = "3.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.24.0"
