[workspace]
resolver = "3"
members = ["minidb"]

[workspace.package]
authors = ["DarkCeptor44"]
edition = "2024"
rust-version = "1.89"
license = "LGPL-3.0-or-later"
homepage = "https://github.com/DarkCeptor44/minidb"
repository = "https://github.com/DarkCeptor44/minidb"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
cuid2 = "0.1.4"
divan = "0.1.21"
postcard = "1.1.3"
rand = "0.10.0"
redb = "3.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.24.0"

# for -Zminimal-versions
num = "0.4.3"
