[workspace]
resolver = "3"
members = ["minidb", "minidb-macros"]

[workspace.package]
version = "0.2.0"
authors = ["DarkCeptor44"]
edition = "2024"
rust-version = "1.89"
license = "MPL-2.0"
homepage = "https://github.com/DarkCeptor44/minidb"
repository = "https://github.com/DarkCeptor44/minidb"

[workspace.dependencies]
# minidb
anyhow = "1.0.100"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
cuid2 = "0.1.4"
divan = "0.1.21"
minidb-macros = { version = "0.2.0", path = "./minidb-macros" }
postcard = "1.1.3"
rand = "0.10.0"
redb = "4.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.25.0"

# minidb-macros
heck = "0.5.0"
proc-macro2 = "1.0.106"
proc-macro-crate = "3.4.0"
quote = "1.0.44"
syn = "2.0.114"

# for -Zminimal-versions
num = "0.4.3"
