[package]
name = "minidb-macros"
version.workspace = true
description = "Procedural macros for minidb database wrapper"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["macros", "derive", "minidb", "database"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
proc-macro-crate.workspace = true
quote.workspace = true
syn.workspace = true
