[package]
name = "minidb-utils"
version = "0.1.0"
description = "Utilities for MiniDB"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
anyhow.workspace = true
argon2 = "^0.5"
bitcode = { version = "^0.6", default-features = false, features = ["serde"] }
chacha20poly1305 = { version = "^0.10", default-features = false, features = [
    "getrandom",
    "std",
    "rand_core",
] }
rand = "^0.9"
serde = { version = "^1", default-features = false, features = ["derive"] }
tempfile = "^3"
thiserror.workspace = true
tokio = { version = "^1", features = ["fs", "io-util"], optional = true }

[dev-dependencies]
divan = "^0.1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "fs"
harness = false

[[bench]]
name = "path"
harness = false

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["tokio"]
