[package]
name = "minidb"
version = "0.1.0"
description = "Minimal-but-functional structured wrapper for redb"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
cuid2.workspace = true
postcard = { workspace = true, features = ["use-std"] }
redb.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# for -Zminimal-versions
num.workspace = true

[dev-dependencies]
divan.workspace = true
rand.workspace = true
tempfile.workspace = true

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "minidb"
harness = false
