[package]
name = "minidb"
version.workspace = true
description = "Minimal-but-functional structured wrapper for redb"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["database", "redb", "embedded", "storage", "nosql"]
categories = ["database-implementations", "data-structures"]

[dependencies]
anyhow.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
cuid2.workspace = true
minidb-macros = { workspace = true, optional = true }
postcard = { workspace = true, features = ["use-std"] }
redb.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# for -Zminimal-versions
num.workspace = true

[dev-dependencies]
divan.workspace = true
rand.workspace = true
tempfile.workspace = true

[features]
default = []
macros = ["dep:minidb-macros"]

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "minidb"
harness = false

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["macros"]
